unpackaged/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__ColumnHeadingField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ColumnHeadingField__c</fullName>
    <description>The API name of the field on quote object that sources value for this column&#39;s heading.</description>
    <inlineHelpText>Le champ source du titre dynamique de cette colonne.</inlineHelpText>
    <label>Column Heading Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>