unpackaged/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__ConditionalPrintField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ConditionalPrintField__c</fullName>
    <description>Field on quote object that controls whether this column prints on generated PDF document.</description>
    <inlineHelpText>Champ de l&#39;objet Devis qui contrôle si cette colonne est imprimée dans le document PDF généré.</inlineHelpText>
    <label>Conditional Print Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group Line Items</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>