unpackaged/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__DynamicNumberScale__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__DynamicNumberScale__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The decimal scale for numbers in the column are set based on the largest precision in the column.</description>
    <inlineHelpText>L&#39;échelle décimale des chiffres de la colonne est basée sur la précision la plus élevé dans la colonne.</inlineHelpText>
    <label>Dynamic Number Scale</label>
    <type>Checkbox</type>
</CustomField>