unpackaged/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__FieldName__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__FieldName__c</fullName>
    <description>Field name relative to the Quote Line object.</description>
    <inlineHelpText>Nom d&#39;API du champ de l&#39;objet Ligne de devis que vous souhaitez afficher dans cette colonne.</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>