unpackaged/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__FontSize__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__FontSize__c</fullName>
    <description>Size of font (in points) applied to this column.</description>
    <inlineHelpText>Spécifie la taille de la police (en points) du texte de cette colonne. Si vous laissez ce champ vide, le texte hérite de la taille de police du modèle.</inlineHelpText>
    <label>Font Size (pt)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>