unpackaged/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__FontWeight__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__FontWeight__c</fullName>
    <description>Weight of font applied to this column.</description>
    <inlineHelpText>Spécifiez l&#39;épaisseur de police du texte cette colonne. Si vous laissez ce champ vide, l&#39;épaisseur « Normal » est appliquée au texte.</inlineHelpText>
    <label>Font Weight</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Bold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>