unpackaged/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__HeadingTextColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__HeadingTextColor__c</fullName>
    <description>Color (in Hex) applied to text in the heading of this column.</description>
    <inlineHelpText>Spécifiez la couleur (en valeur hexadécimale) du texte du titre de cette colonne. Si vous laissez ce champ vide, le titre hérite de la couleur du texte de la colonne.</inlineHelpText>
    <label>Heading Text Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>