unpackaged/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__RollUp__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__RollUp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this field should be rolled up into master line. Only applicable if Roll-Up Field is specified on the template.</description>
    <inlineHelpText>Indique si ce champ doit être cumulé dans la ligne principale. Applicable uniquement si Cumuler le champ est spécifié dans le modèle.</inlineHelpText>
    <label>Roll Up</label>
    <type>Checkbox</type>
</CustomField>