unpackaged/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__SeparateLine__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SeparateLine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that determines whether this field is printed on its own separate line.</description>
    <inlineHelpText>Sélectionnez cette case pour imprimer ce champ sur sa propre ligne. Utilisée pour les champs de texte long tels que les descriptions de produits.</inlineHelpText>
    <label>Separate Line</label>
    <type>Checkbox</type>
</CustomField>