unpackaged/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__SummaryFontWeight__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SummaryFontWeight__c</fullName>
    <description>Weight of font applied to text in the summary row.</description>
    <inlineHelpText>Spécifiez l&#39;épaisseur de police du texte de la ligne de résumé de cette colonne. Si vous laissez ce champ vide, l&#39;épaisseur de police de toute la colonne s&#39;applique par défaut.</inlineHelpText>
    <label>Summary Font Weight</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Bold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>