unpackaged/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__SummaryLabel__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SummaryLabel__c</fullName>
    <description>Label output for this column in the summary row.</description>
    <inlineHelpText>Sortie de l&#39;étiquette de cette colonne dans la ligne de résumé.</inlineHelpText>
    <label>Summary Label</label>
    <length>200</length>
    <type>Text</type>
</CustomField>