unpackaged/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__TextColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TextColor__c</fullName>
    <description>Color (in Hex) applied to text in this column.</description>
    <inlineHelpText>Spécifiez la couleur (en valeur hexadécimale) du texte de cette colonne. Si vous laissez ce champ vide, le texte hérite de la couleur du modèle.</inlineHelpText>
    <label>Text Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>