unpackaged/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__WidthDiscardedWhenHidden__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__WidthDiscardedWhenHidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that determines whether width of this column is re-allocated to another column or discarded when the column is dynamically hidden.</description>
    <inlineHelpText>Sélectionnez la case lorsque les colonnes sont affichées de façon conditionnelle pour remplacer une ou plusieurs autres colonnes. Si cette case n&#39;est pas sélectionnée, lorsque cette colonne est masquée, sa largeur est réattribuée à une autre colonne et la largeur du tableau reste inchangée.</inlineHelpText>
    <label>Discard Width When Hidden</label>
    <type>Checkbox</type>
</CustomField>